--- a/starter-code/app/index.html
+++ b/starter-code/app/index.html
@@ -5,7 +5,7 @@
   <title>The Fellowship of the Ring</title>
   <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
-<body>
+<body class="lands">
   <div class="overlay">
   </div>
   <audio id="nazgul-screech" src="./media/nazgul_screech.mp3"></audio>
@@ -14,6 +14,11 @@
       document.getElementById("nazgul-screech").play();
     }
   </script>
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.js"
+  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+  crossorigin="anonymous"></script>
   <script src="./scripts/fellowship.js"></script>
+  // need to add ./scripts to access the javascript
 </body>
 </html>
